--- a/index.html
+++ b/index.html
@@ -216,12 +216,18 @@ footer {
   </style>
 </head>
 <body>
-  <!-- Splash Loading -->
+  <!-- 1. Splash Loading with Branding -->
   <div id="splash">
     <div class="splash-content">
-      <span class="brand-logo">🟡</span>
-      <h1 class="brand-title-anim">Raj Marketing</h1>
-      <div class="splash-desc"<strong> M  Y   S   O  R   E </strong></div>
+      <h1 class="brand-title gradient-text">Raj Marketing</h1>
+      <div class="shades">
+        <span class="shade gold"></span>
+        <span class="shade silver"></span>
+        <span class="shade bronze"></span>
+      </div>
+      <div class="loading-bar">
+        <div class="loading-bar-progress"></div>
+      </div>
     </div>
   </div>
 
