--- a/index.html
+++ b/index.html
@@ -5,8 +5,208 @@
   <title>Raj Marketing - Gold, Silver, Bronze Nets</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="css/style.css"/>
   <link rel="icon" href="assets/images/logo.svg">
+  <style>
+    :root {
+  --primary: #0e2a47;
+  --secondary: #3bb4f2;
+  --dark-yellow: #ffd600;
+  --gold: #ffd700;
+  --silver: #d0d0d0;
+  --bronze: #b08d57;
+  --white: #fff;
+}
+html, body {
+  height: 100%;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  background: var(--primary);
+  color: var(--white);
+}
+body { min-height: 100vh; display: flex; flex-direction: column;}
+a { color: inherit; text-decoration: none;}
+img { vertical-align: middle;}
+.shadow { box-shadow: 0 2px 14px rgba(30,40,80,0.16);}
+ul {padding-left: 1.3em;}
+/* Splash */
+#splash {
+  position: fixed; left: 0; top: 0; width: 100vw; height: 100vh;
+  background: var(--primary);
+  z-index: 1000; display: flex; align-items: center; justify-content: center;
+  transition: opacity 0.2s;
+}
+.splash-content { text-align: center; width: 100%;}
+.brand-logo { font-size: 2.6em; margin-bottom: 0.2em; display:inline-block;}
+.brand-splash-title {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  font-size: 1.5em;
+  letter-spacing: 1.1px;
+  margin-bottom: 0.12em;
+  text-shadow: 0 2px 16px #000a;
+}
+.shine {
+  background: linear-gradient(90deg, var(--gold), var(--silver), var(--bronze), var(--gold), var(--silver));
+  background-size: 300% auto;
+  color: var(--white);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shimmer 2.1s linear 1;
+}
+@keyframes shimmer {
+  0% { background-position: 200% 0;}
+  100% { background-position: 0 0;}
+}
+.splash-caption {
+  font-size: 1em;
+  font-weight: bold;
+  color: var(--dark-yellow);
+  text-shadow: 0 1px 5px rgba(0,0,0,0.2);
+  letter-spacing: 0.4px;
+  margin-top: 0.7em;
+}
+
+/* Header */
+.mobile-header {
+  background: var(--primary);
+  box-shadow: 0 2px 8px rgba(0,0,0,0.13);
+  padding: 0.5em 0;
+  position: sticky; top: 0; z-index: 100;
+}
+.header-row { display: flex; align-items: center; padding: 0 1em;}
+.brand-name {
+  font-size: 1.17em;
+  font-weight: 700;
+  color: var(--dark-yellow);
+  margin-left: 10px;
+  flex: 1;
+  letter-spacing: 0.3px;
+}
+.header-actions { display: flex; align-items: center; gap: 10px;}
+.icon-btn { background: none; border: none; cursor: pointer; padding: 7px; font-size: 1.3em;}
+.icon-menu { font-size: 1.4em; }
+
+/* Side Menu */
+#side-menu, #side-menu-backdrop { display:none;}
+.side-menu {
+  position: fixed; left: 0; top: 0; width: 75vw; max-width: 330px; height: 100vh;
+  background: var(--primary); box-shadow: 2px 0 18px rgba(0,0,0,0.22); z-index: 9999;
+  transform: translateX(-100%); transition: transform 0.28s;
+  padding-top: 0.2em;
+}
+.side-menu.active { transform: translateX(0); display: block;}
+#side-menu-backdrop.active {display:block; position:fixed; left:0;top:0;width:100vw;height:100vh;z-index:9998;background:rgba(0,0,0,0.16);}
+.side-menu-header { display: flex; justify-content: space-between; align-items: center; padding: 1em 1.2em 0.2em;}
+.side-menu-header span { font-size: 1.08em; color: var(--dark-yellow);}
+.side-menu ul { list-style: none; padding: 0 1.1em;}
+.side-menu li { margin: 1em 0;}
+.side-menu a { color: var(--white); font-size: 1.05em; display: flex; align-items: center; gap: 10px; font-weight: 600;}
+.side-menu hr {margin: .6em 0;}
+
+/* Sliders */
+.slider-section {background: var(--primary); margin: 1.2em 0;}
+.slider {display: flex;overflow-x: auto;scroll-behavior: smooth;gap: 1em;padding: 1em 0.5em;}
+.slide, .ad-slide, .product-slide {
+  background: #18345a;
+  border-radius: 13px;
+  min-width: 245px; max-width: 265px;
+  margin-right: 0.6em; padding: 1em 1em;
+  display: flex; align-items: center; gap: 1em;
+  box-shadow: 0 2px 16px rgba(50,40,100,0.15);
+}
+.ad-slide, .product-slide { flex-direction: column; align-items: flex-start; min-width: 175px; max-width: 190px;}
+.promo-icon { font-size: 2em; margin-right: 0.3em; display:inline-block; width:48px; text-align:center;}
+.promo-title { font-weight: 700; color: var(--dark-yellow); font-size: 1.05em;}
+.promo-desc { font-size: 0.97em; color: #cbe7fa;}
+.slider-nav { text-align: right; margin: 0.3em 1em;}
+.slider-arrow { background: var(--secondary); border: none; border-radius: 50%; width: 33px; height: 33px; margin: 0 0.15em; font-size: 1.2em; color: var(--primary);}
+.section-title { color: var(--dark-yellow); font-weight: 700; margin: 0.5em 0 0.1em 0; font-size: 1.18em;}
+.ad-img {width: 100%; height: 70px; object-fit: cover; border-radius:8px;}
+.ad-caption, .product-title { font-size: 1.05em; font-weight: 700; color: var(--secondary);}
+.product-img {width: 56px; height: 56px; object-fit: contain; border-radius: 10px; background: var(--white);}
+.product-desc { color: #cbe7fa; font-size: 0.96em;}
+
+/* Search Bar Section */
+.search-bar-section {
+  margin: 1.1em 0 0.6em 0;
+  display: flex; justify-content: center;
+}
+.search-form {
+  width: 94%; max-width: 410px; display: flex; align-items: center; border-radius: 30px; background: #eaf6fc; box-shadow: 0 2px 12px rgba(40,120,200,0.10); padding: 0.33em 0.5em;
+}
+.main-search-input {
+  flex: 1; border: none; outline: none; background: transparent; font-size: 1em; font-family: inherit; padding: 0.7em 0.9em; color: #18345a;
+}
+.main-search-btn {
+  background: var(--secondary); color: var(--white); border: none; border-radius: 22px; font-weight: 600; font-family: inherit; font-size: 1.01em; padding: 0.5em 1.3em; margin-left: 6px; cursor: pointer; transition: background 0.18s;
+}
+.main-search-btn:hover {background: var(--dark-yellow); color: var(--primary);}
+
+/* Value Section */
+.value-section {
+  background: #18345a;
+  border-radius: 12px;
+  margin: 0.8em 1em 1em 1em;
+  padding: 1.1em 1.2em 0.6em 1.2em;
+  box-shadow: 0 2px 14px rgba(30,40,80,0.15);
+}
+.value-section h2 {
+  color: var(--dark-yellow);
+  font-weight: 700;
+  font-size: 1.13em;
+  margin-bottom: 0.4em;
+}
+.value-section ul {
+  margin: 0; padding: 0 0 0 1.2em;
+}
+.value-section li {
+  color: #d6e5fa;
+  margin-bottom: 0.5em;
+  font-size: 1em;
+}
+
+/* Lower Menu */
+.lower-menu {
+  display: flex; justify-content: space-around; align-items: center;
+  background: #112945;
+  border-radius: 19px 19px 0 0;
+  position: sticky; bottom: 0; left: 0; right: 0;
+  z-index: 10; margin-top: 0.6em; padding: 0.3em 0.12em;
+  box-shadow: 0 -2px 12px rgba(0,0,0,0.13);
+}
+.lower-menu a { flex: 1; text-align: center; color: var(--white); font-size: 1em; padding: 0.5em 0;}
+.lower-menu span { display: block;}
+.lower-menu a span:first-child {font-size:1.3em;margin-bottom:0.1em;}
+
+/* Footer */
+footer {
+  background: #0e233a;
+  text-align: center;
+  padding: 1em 0 0.5em 0;
+  font-size: 0.98em;
+  color: #e3e3e3;
+  border-radius: 14px 14px 0 0;
+  margin-top: 2em;
+}
+.footer-links {
+  display: flex; flex-wrap: wrap; justify-content: center; gap: 1em; margin-bottom: 0.5em;
+}
+.footer-links a { color: var(--dark-yellow); font-size: 1.01em;}
+.footer-brand { color: var(--secondary); margin-top: 0.2em; font-weight: 700;}
+.footer-contact { color: var(--white); font-size: 0.97em;}
+.footer-contact a {color:var(--dark-yellow);}
+
+@media (max-width: 600px) {
+  .slide, .ad-slide, .product-slide { min-width: 78vw; max-width: 90vw;}
+  .header-row { flex-wrap: wrap;}
+  .brand-name { font-size: 1.07em;}
+  .mobile-header { padding: 0.2em 0;}
+  .slider-nav { margin: 0.3em 0.4em;}
+  .value-section {margin: 0.8em 0.5em;}
+  .footer-links {gap:0.6em;}
+}
+  </style>
 </head>
 <body>
   <!-- 1. Splash/Loading Page -->
