--- a/index.html
+++ b/index.html
@@ -377,6 +377,51 @@ footer {
     </div>
   </footer>
 
-  <script src="js/script.js"></script>
+  <script>
+    // Splash loading animation with shiny text
+window.addEventListener('DOMContentLoaded', () => {
+  const splash = document.getElementById('splash');
+  setTimeout(() => { splash.style.opacity = '0'; }, 1600);
+  setTimeout(() => { splash.style.display = 'none'; }, 1800);
+});
+
+// Side menu open/close logic
+const menuBtn = document.getElementById('menu-btn');
+const sideMenu = document.getElementById('side-menu');
+const closeMenu = document.getElementById('close-menu');
+const backdrop = document.getElementById('side-menu-backdrop');
+if (menuBtn && sideMenu && closeMenu && backdrop) {
+  menuBtn.onclick = () => { sideMenu.classList.add('active'); backdrop.classList.add('active'); }
+  closeMenu.onclick = () => { sideMenu.classList.remove('active'); backdrop.classList.remove('active'); }
+  backdrop.onclick = () => { sideMenu.classList.remove('active'); backdrop.classList.remove('active'); }
+}
+
+// Slider logic (horizontal scroll)
+function sliderInit(sliderId, prevBtnId, nextBtnId) {
+  const slider = document.getElementById(sliderId);
+  const prev = document.getElementById(prevBtnId);
+  const next = document.getElementById(nextBtnId);
+
+  if (!slider || !prev || !next) return;
+  let slideWidth = slider.children[0].offsetWidth + 18;
+  prev.onclick = () => {
+    slider.scrollBy({ left: -slideWidth, behavior: 'smooth' });
+  }
+  next.onclick = () => {
+    slider.scrollBy({ left: slideWidth, behavior: 'smooth' });
+  }
+}
+sliderInit('promo-slider', 'promo-prev', 'promo-next');
+sliderInit('ad-slider', 'ad-prev', 'ad-next');
+sliderInit('product-slider', 'prod-prev', 'prod-next');
+
+// Search (dummy, can be replaced by real)
+document.querySelectorAll('.search-form').forEach(form => {
+  form.addEventListener('submit', e => {
+    e.preventDefault();
+    alert('Search feature coming soon!');
+  });
+});
+  </script>
 </body>
           </html>
