--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@
       flex: 1; border: none; outline: none; background: transparent; font-size: 0.98em; font-family: inherit; padding: 0.4em 0.7em; color: #18345a;
     }
     .main-search-btn {
-      background: var(--secondary); color: var(--white); border: none; border-radius: 10px; font-weight: 400; font-family: inherit; font-size: 0.67em; padding: 0.2em .75em; margin-center: 0px; cursor: pointer; transition: background 0.18s;
+      background: var(--secondary); color: var(--white); border: none; border-radius: 10px; font-weight: 400; 
+      font-family: inherit; font-size: 0.67em; padding: 0.2em .75em; margin-right: 5px; cursor: pointer; 
+      transition: background 0.18s;
     }
     .main-search-btn:hover {background: var(--dark-yellow); color: var(--primary);}
 
