--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <h1>Welcome to </h1>
   <title>Raj Marketing</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet"/>
@@ -218,6 +217,7 @@
   <!-- 1. Splash/Loading Page -->
   <div id="splash">
     <div class="splash-content">
+      <h1> Welcome to.. </h1>
       <h1 class="brand-splash-title">
         Raj Marketing
       </h1>
