--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
   <!-- 1. Splash/Loading Page -->
   <div id="splash">
     <div class="splash-content">
-      <h1> Welcome to.. </h1>
+      <h3> Welcome to.. </h3>
       <h1 class="brand-splash-title">
         Raj Marketing
       </h1>
@@ -273,6 +273,7 @@
         <div class="slide"><span class="promo-icon">🚚</span><div><div class="promo-title">Free Delivery</div><div class="promo-desc">Across Mysore city limits</div></div></div>
         <div class="slide"><span class="promo-icon">📞</span><div><div class="promo-title">Support 24/7</div><div class="promo-desc">Always here for you</div></div></div>
         <div class="slide"><span class="promo-icon">🔒</span><div><div class="promo-title">Secure</div><div class="promo-desc">Child & pet friendly mesh</div></div></div>
+        <div class="slide"><span class="promo-icon">☎️</span><div><div class="promo-title">Call Now</div><div class="promo-desc">(+91) 9483037385 </div></div></div>
       </div>
       <div class="slider-nav">
         <button id="promo-prev" class="slider-arrow">←</button>
