--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -7,48 +7,245 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet"/>
   <link rel="icon" href="../images/logo.svg">
   <style>
-    :root { --primary: #0e2a47; --secondary: #3bb4f2; --dark-yellow: #ffd600; --gold: #ffd700; --silver: #d0d0d0; --bronze: #b08d57; --white: #fff; }
-    body { background: var(--primary); color: var(--white); font-family: 'Poppins', sans-serif; margin: 0;}
-    .container { max-width: 360px; margin: 6vh auto; padding: 2em 1.5em; background: #18345a; border-radius: 16px; box-shadow: 0 2px 18px #0003;}
-    h1 { color: var(--dark-yellow); text-align:center;}
-    label { font-weight: 600; color: var(--dark-yellow); margin-top: 1.1em; display: block;}
-    input { width: 100%; padding: 0.75em; border-radius: 9px; border: none; font-size: 1em; margin-top: 0.4em; color: #18345a;}
-    button { background: var(--secondary); color: #fff; padding: 0.7em 2em; border: none; border-radius: 8px; font-weight: 700; margin-top: 1.5em; cursor: pointer; width:100%;}
-    .switch { color:#cbe7fa; text-align:center; margin-top:1.2em;}
-    .switch a { color: var(--secondary);}
-    .msg {margin-top:1em; color:#cbe7fa;}
+    :root {
+      --primary: #0e2a47;
+      --secondary: #3bb4f2;
+      --dark-yellow: #ffd600;
+      --gold: #ffd700;
+      --silver: #d0d0d0;
+      --bronze: #b08d57;
+      --white: #fff;
+    }
+    body {
+      background: var(--primary);
+      color: var(--white);
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .brand-login-title {
+      font-family: 'Poppins', sans-serif;
+      font-weight: 700;
+      font-size: 2.1em;
+      letter-spacing: 1.6px;
+      margin-bottom: 0.26em;
+      background: linear-gradient(90deg, var(--gold) 0%, var(--silver) 50%, var(--bronze) 100%);
+      background-size: 200% auto;
+      color: var(--white);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: shine 1.6s linear 1;
+      text-shadow: 0 2px 20px #000a, 0 0 18px var(--dark-yellow);
+      text-align: center;
+    }
+    @keyframes shine {
+      0% {background-position: 400% 0;}
+      100% {background-position: 0 0;}
+    }
+    .login-container {
+      max-width: 380px;
+      width: 98vw;
+      margin: 3vh auto;
+      background: #18345a;
+      border-radius: 22px;
+      box-shadow: 0 4px 32px 0 #0008, 0 2px 10px #0003;
+      padding: 2.1em 2em 2.6em 2em;
+      position: relative;
+      overflow: hidden;
+      z-index: 1;
+    }
+    .login-container::before {
+      content: '';
+      position: absolute;
+      top: -80px;
+      left: -60px;
+      width: 160px;
+      height: 160px;
+      background: radial-gradient(circle at 30% 30%, var(--secondary) 60%, transparent 100%);
+      opacity: 0.18;
+      z-index: 0;
+    }
+    .login-container::after {
+      content: '';
+      position: absolute;
+      bottom: -60px;
+      right: -60px;
+      width: 180px;
+      height: 180px;
+      background: radial-gradient(circle at 60% 60%, var(--gold) 60%, transparent 100%);
+      opacity: 0.13;
+      z-index: 0;
+    }
+    .login-header {
+      text-align: center;
+      margin-bottom: 0.5em;
+      z-index: 1;
+      position: relative;
+    }
+    .login-header img {
+      width: 54px;
+      height: 54px;
+      border-radius: 50%;
+      background: var(--white);
+      object-fit: contain;
+      border: 3px solid var(--dark-yellow);
+      box-shadow: 0 2px 12px #0005;
+      margin-bottom: 0.3em;
+      margin-top: -0.8em;
+    }
+    .login-form {
+      z-index: 1;
+      position: relative;
+    }
+    label {
+      font-weight: 600;
+      color: var(--dark-yellow);
+      margin-top: 1.1em;
+      display: block;
+      letter-spacing: 0.2px;
+      font-size: 1.01em;
+    }
+    input[type="tel"],
+    input[type="password"] {
+      width: 100%;
+      padding: 0.76em 1.1em;
+      border-radius: 10px;
+      border: 1.5px solid #23406c;
+      background: #eaf6fc;
+      font-size: 1em;
+      margin-top: 0.4em;
+      color: #18345a;
+      box-sizing: border-box;
+      transition: border 0.2s;
+      margin-bottom: 0.55em;
+    }
+    input[type="tel"]:focus,
+    input[type="password"]:focus {
+      border: 1.5px solid var(--secondary);
+      outline: none;
+      background: #fff;
+    }
+    .login-btn {
+      background: linear-gradient(90deg,var(--dark-yellow),var(--secondary));
+      color: #18345a;
+      padding: 0.82em 2em;
+      border: none;
+      border-radius: 9px;
+      font-weight: 700;
+      font-size: 1.13em;
+      margin-top: 1.1em;
+      cursor: pointer;
+      width: 100%;
+      letter-spacing: 0.7px;
+      box-shadow: 0 2px 8px #0002;
+      transition: background 0.16s, color 0.16s;
+    }
+    .login-btn:hover, .login-btn:active {
+      background: linear-gradient(90deg, var(--secondary), var(--gold));
+      color: var(--primary);
+    }
+    .switch {
+      color: #cbe7fa;
+      text-align: center;
+      margin-top: 1.6em;
+      font-size: 1.08em;
+    }
+    .switch a {
+      color: var(--secondary);
+      font-weight: bold;
+      text-decoration: underline;
+      letter-spacing: 0.2px;
+    }
+    .msg {
+      margin-top: 1em;
+      color: #ffb542;
+      text-align: center;
+      font-size: 1.05em;
+      min-height: 22px;
+      font-weight: 500;
+      letter-spacing: 0.12em;
+    }
+    .show-hide-pwd {
+      position: relative;
+      float: right;
+      margin-top: -2.3em;
+      margin-right: 0.7em;
+      z-index: 2;
+      color: #3bb4f2;
+      cursor: pointer;
+      font-size: 1.1em;
+      user-select: none;
+    }
+    @media (max-width: 480px) {
+      .login-container { padding: 1.2em 0.7em 2em 0.7em; }
+      .brand-login-title { font-size: 1.5em; }
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Customer Login</h1>
-    <form id="loginForm">
+  <div class="brand-login-title">Raj Marketing</div>
+  <div class="login-container shadow">
+    <div class="login-header">
+      <img src="../images/logo.svg" alt="Raj Marketing Logo">
+      <div style="font-weight:700; color:var(--dark-yellow); font-size:1.18em; margin-bottom:0.8em;">Welcome Back!</div>
+    </div>
+    <form id="loginForm" class="login-form" autocomplete="on">
       <label for="phone">Mobile Number *</label>
-      <input id="phone" name="phone" type="tel" maxlength="10" required pattern="[0-9]{10}">
+      <input id="phone" name="phone" type="tel" maxlength="10" required pattern="[0-9]{10}" placeholder="Enter your 10-digit mobile" autocomplete="username">
       <label for="password">Password *</label>
-      <input id="password" name="password" type="password" required>
-      <button type="submit">Login</button>
+      <input id="password" name="password" type="password" required placeholder="Enter your password" autocomplete="current-password">
+      <span class="show-hide-pwd" id="togglePwd" title="Show/Hide Password">&#128065;</span>
+      <button type="submit" class="login-btn">Login</button>
       <div class="msg" id="loginMsg"></div>
     </form>
     <div class="switch">
       New user? <a href="signup.html">Create an account</a>
     </div>
   </div>
-<script>
-// Simulated login using localStorage
-document.getElementById('loginForm').onsubmit = function(e){
-  e.preventDefault();
-  const phone = phone.value.trim();
-  const pwd = password.value;
-  const users = JSON.parse(localStorage.getItem('raj_users')||'[]');
-  const user = users.find(u=>u.phone===phone && u.password===pwd);
-  if(user){
-    localStorage.setItem('raj_loggedin', phone);
-    window.location.href = "customer.html";
-  }else{
-    loginMsg.textContent = "Invalid login. Please check details.";
-  }
-}
-</script>
+  <script>
+    // Show/hide password
+    document.getElementById('togglePwd').onclick = function() {
+      const pwdInput = document.getElementById('password');
+      if (pwdInput.type === 'password') {
+        pwdInput.type = 'text';
+        this.textContent = '🙈';
+      } else {
+        pwdInput.type = 'password';
+        this.textContent = '👁️';
+      }
+    };
+    
+    // Simulated login using localStorage
+    document.getElementById('loginForm').onsubmit = function(e){
+      e.preventDefault();
+      const phone = document.getElementById('phone').value.trim();
+      const pwd = document.getElementById('password').value;
+      const loginMsg = document.getElementById('loginMsg');
+      if(!/^[0-9]{10}$/.test(phone)) {
+        loginMsg.textContent = "Enter a valid 10-digit mobile number.";
+        return;
+      }
+      if(!pwd) {
+        loginMsg.textContent = "Password cannot be empty.";
+        return;
+      }
+      const users = JSON.parse(localStorage.getItem('raj_users')||'[]');
+      const user = users.find(u=>u.phone===phone && u.password===pwd);
+      if(user){
+        localStorage.setItem('raj_loggedin', phone);
+        loginMsg.style.color="#37f98b";
+        loginMsg.textContent = "Login successful! Redirecting...";
+        setTimeout(()=>{ window.location.href = "customer.html"; }, 800);
+      }else{
+        loginMsg.style.color="#ffb542";
+        loginMsg.textContent = "Invalid login. Please check details.";
+      }
+    }
+  </script>
 </body>
-        </html>
+</html>
