--- a/assets/pages/signup.html
+++ b/assets/pages/signup.html
@@ -7,31 +7,193 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet"/>
   <link rel="icon" href="../images/logo.svg">
   <style>
-    :root { --primary: #0e2a47; --secondary: #3bb4f2; --dark-yellow: #ffd600;}
-    body { background: var(--primary); color: var(--white); font-family: 'Poppins', sans-serif; margin: 0;}
-    .container { max-width: 360px; margin: 6vh auto; padding: 2em 1.5em; background: #18345a; border-radius: 16px; box-shadow: 0 2px 18px #0003;}
-    h1 { color: var(--dark-yellow); text-align:center;}
-    label { font-weight: 600; color: var(--dark-yellow); margin-top: 1.1em; display: block;}
-    input { width: 100%; padding: 0.75em; border-radius: 9px; border: none; font-size: 1em; margin-top: 0.4em; color: #18345a;}
-    button { background: var(--secondary); color: #fff; padding: 0.7em 2em; border: none; border-radius: 8px; font-weight: 700; margin-top: 1.5em; cursor: pointer; width:100%;}
-    .switch { color:#cbe7fa; text-align:center; margin-top:1.2em;}
-    .switch a { color: var(--secondary);}
-    .msg {margin-top:1em; color:#cbe7fa;}
+    :root {
+      --primary: #0e2a47;
+      --secondary: #3bb4f2;
+      --dark-yellow: #ffd600;
+      --gold: #ffd700;
+      --silver: #d0d0d0;
+      --bronze: #b08d57;
+      --white: #fff;
+    }
+    body {
+      background: var(--primary);
+      color: var(--white);
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .brand-signup-title {
+      font-family: 'Poppins', sans-serif;
+      font-weight: 700;
+      font-size: 2.1em;
+      letter-spacing: 1.6px;
+      margin-bottom: 0.26em;
+      background: linear-gradient(90deg, var(--gold) 0%, var(--silver) 50%, var(--bronze) 100%);
+      background-size: 200% auto;
+      color: var(--white);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: shine 1.6s linear 1;
+      text-shadow: 0 2px 20px #000a, 0 0 18px var(--dark-yellow);
+      text-align: center;
+    }
+    @keyframes shine {
+      0% {background-position: 400% 0;}
+      100% {background-position: 0 0;}
+    }
+    .signup-container {
+      max-width: 400px;
+      width: 98vw;
+      margin: 3vh auto;
+      background: #18345a;
+      border-radius: 22px;
+      box-shadow: 0 4px 32px 0 #0008, 0 2px 10px #0003;
+      padding: 2.2em 2em 2.7em 2em;
+      position: relative;
+      overflow: hidden;
+      z-index: 1;
+    }
+    .signup-container::before {
+      content: '';
+      position: absolute;
+      top: -80px;
+      left: -60px;
+      width: 160px;
+      height: 160px;
+      background: radial-gradient(circle at 30% 30%, var(--secondary) 60%, transparent 100%);
+      opacity: 0.18;
+      z-index: 0;
+    }
+    .signup-container::after {
+      content: '';
+      position: absolute;
+      bottom: -60px;
+      right: -60px;
+      width: 180px;
+      height: 180px;
+      background: radial-gradient(circle at 60% 60%, var(--gold) 60%, transparent 100%);
+      opacity: 0.13;
+      z-index: 0;
+    }
+    .signup-header {
+      text-align: center;
+      margin-bottom: 0.6em;
+      z-index: 1;
+      position: relative;
+    }
+    .signup-header img {
+      width: 53px;
+      height: 53px;
+      border-radius: 50%;
+      background: var(--white);
+      object-fit: contain;
+      border: 3px solid var(--dark-yellow);
+      box-shadow: 0 2px 12px #0005;
+      margin-bottom: 0.3em;
+      margin-top: -0.8em;
+    }
+    .signup-form {
+      z-index: 1;
+      position: relative;
+    }
+    label {
+      font-weight: 600;
+      color: var(--dark-yellow);
+      margin-top: 1.12em;
+      display: block;
+      letter-spacing: 0.2px;
+      font-size: 1.01em;
+    }
+    input[type="text"],
+    input[type="tel"],
+    input[type="email"],
+    input[type="password"] {
+      width: 100%;
+      padding: 0.76em 1.1em;
+      border-radius: 10px;
+      border: 1.5px solid #23406c;
+      background: #eaf6fc;
+      font-size: 1em;
+      margin-top: 0.4em;
+      color: #18345a;
+      box-sizing: border-box;
+      transition: border 0.2s;
+      margin-bottom: 0.55em;
+    }
+    input:focus {
+      border: 1.5px solid var(--secondary);
+      outline: none;
+      background: #fff;
+    }
+    .signup-btn {
+      background: linear-gradient(90deg,var(--dark-yellow),var(--secondary));
+      color: #18345a;
+      padding: 0.82em 2em;
+      border: none;
+      border-radius: 9px;
+      font-weight: 700;
+      font-size: 1.13em;
+      margin-top: 1.1em;
+      cursor: pointer;
+      width: 100%;
+      letter-spacing: 0.7px;
+      box-shadow: 0 2px 8px #0002;
+      transition: background 0.16s, color 0.16s;
+    }
+    .signup-btn:hover, .signup-btn:active {
+      background: linear-gradient(90deg, var(--secondary), var(--gold));
+      color: var(--primary);
+    }
+    .switch {
+      color: #cbe7fa;
+      text-align: center;
+      margin-top: 1.6em;
+      font-size: 1.08em;
+    }
+    .switch a {
+      color: var(--secondary);
+      font-weight: bold;
+      text-decoration: underline;
+      letter-spacing: 0.2px;
+    }
+    .msg {
+      margin-top: .8em;
+      color: #ffb542;
+      text-align: center;
+      font-size: 1.06em;
+      min-height: 22px;
+      font-weight: 500;
+      letter-spacing: 0.12em;
+    }
+    @media (max-width: 480px) {
+      .signup-container { padding: 1.2em 0.7em 2em 0.7em; }
+      .brand-signup-title { font-size: 1.5em; }
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Sign Up</h1>
-    <form id="signupForm">
+  <div class="brand-signup-title">Raj Marketing</div>
+  <div class="signup-container shadow">
+    <div class="signup-header">
+      <img src="../images/logo.svg" alt="Raj Marketing Logo">
+      <div style="font-weight:700; color:var(--dark-yellow); font-size:1.14em; margin-bottom:0.8em;">Create Your Account</div>
+    </div>
+    <form id="signupForm" class="signup-form" autocomplete="on">
       <label for="name">Full Name *</label>
-      <input id="name" name="name" required maxlength="32">
+      <input id="name" name="name" required maxlength="32" placeholder="Your Name" autocomplete="name">
       <label for="phone">Mobile Number *</label>
-      <input id="phone" name="phone" type="tel" maxlength="10" required pattern="[0-9]{10}">
+      <input id="phone" name="phone" type="tel" maxlength="10" required pattern="[0-9]{10}" placeholder="10-digit number" autocomplete="username">
       <label for="email">Email *</label>
-      <input id="email" name="email" type="email" required>
+      <input id="email" name="email" type="email" required placeholder="you@email.com" autocomplete="email">
       <label for="password">Password *</label>
-      <input id="password" name="password" type="password" required>
-      <button type="submit">Sign Up</button>
+      <input id="password" name="password" type="password" required placeholder="Set a password" autocomplete="new-password">
+      <button type="submit" class="signup-btn">Sign Up</button>
       <div class="msg" id="signupMsg"></div>
     </form>
     <div class="switch">
@@ -41,11 +203,15 @@
 <script>
 document.getElementById('signupForm').onsubmit = function(e){
   e.preventDefault();
-  const name = signupForm.name.value.trim();
-  const phone = signupForm.phone.value.trim();
-  const email = signupForm.email.value.trim();
-  const password = signupForm.password.value;
-  if(!name || !phone || !email || !password) return;
+  const name = document.getElementById('name').value.trim();
+  const phone = document.getElementById('phone').value.trim();
+  const email = document.getElementById('email').value.trim();
+  const password = document.getElementById('password').value;
+  const signupMsg = document.getElementById('signupMsg');
+  if (!name) { signupMsg.textContent = "Name is required."; return; }
+  if (!/^[0-9]{10}$/.test(phone)) { signupMsg.textContent = "Enter valid 10-digit mobile number."; return; }
+  if (!email.match(/^[^\s@]+@[^\s@]+\.[^\s@]+$/)) { signupMsg.textContent = "Enter valid email address."; return; }
+  if (password.length < 4) { signupMsg.textContent = "Password must be at least 4 characters."; return; }
   let users = JSON.parse(localStorage.getItem('raj_users')||'[]');
   if(users.find(u=>u.phone===phone)){
     signupMsg.textContent = "Mobile number already registered.";
@@ -54,7 +220,8 @@ document.getElementById('signupForm').onsubmit = function(e){
   const joinDate = new Date().toISOString().slice(0,10);
   users.push({name, phone, email, password, joinDate, profile:'', cover:0, member:'', memberPay:false, id:'', forms:{}});
   localStorage.setItem('raj_users', JSON.stringify(users));
-  signupMsg.textContent = "Registration successful! Redirecting...";
+  signupMsg.style.color="#37f98b";
+  signupMsg.textContent = "Registration successful! Redirecting to login...";
   setTimeout(()=>window.location.href="login.html",1100);
 }
 </script>
