--- a/assets/pages/customer.html
+++ b/assets/pages/customer.html
@@ -7,49 +7,53 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet"/>
   <link rel="icon" href="../images/logo.svg">
   <style>
-    :root { --primary: #0e2a47; --secondary: #3bb4f2; --dark-yellow: #ffd600; --gold: #ffd700; --silver: #d0d0d0; --bronze: #b08d57; --white: #fff;}
-    body { background: var(--primary); color: var(--white); font-family: 'Poppins', sans-serif; margin: 0;}
-    .cover { height: 140px; width: 100%; border-radius: 0 0 32px 32px; position: relative;}
-    .profile-box { display: flex; flex-direction: column; align-items: center; margin-top:-65px; z-index:2; position:relative;}
-    .profile-pic { width: 110px; height: 110px; border-radius: 50%; border: 4px solid #fff; background: #18345a; object-fit:cover;}
-    .upload-btn { position: absolute; right:11px; top:101px; background: var(--secondary); color: #fff; border: none; padding: 0.4em 0.7em; border-radius: 10px; font-size: 0.9em; cursor:pointer;}
-    .cover-select { position:absolute; right:14px; top:14px;}
-    .cover-swatches { display:flex; gap:7px;}
-    .swatch { width:28px; height:28px; border-radius:7px; border:2px solid #fff; cursor:pointer; box-shadow: 0 2px 10px #0002;}
-    .swatch.selected { border:3px solid var(--dark-yellow);}
-    .card-area, .info-area, .invest-area { margin:1.5em 1em;}
-    .c-name { color: var(--dark-yellow); font-size: 1.5em; font-weight:700; text-align:center;}
-    .c-info { color: #cbe7fa; text-align:center; margin:.2em 0 .5em;}
-    .c-id { color: var(--secondary); text-align:center; font-size:1.1em;}
-    .member-cards { display:flex; gap:1em; justify-content:center; margin: 1.5em 0 0.5em 0;}
-    .m-card { min-width:120px; background:#292929; border-radius:13px; padding:1.1em 1em; color:#fff; text-align:center; box-shadow:0 2px 14px #0003; cursor:pointer; transition: transform .25s;}
+    :root { --primary: #0e2a47; --secondary: #3bb4f2; --dark-yellow: #ffd600; --gold: #ffd700; --silver: #d0d0d0; --bronze: #b08d57; --white: #fff; }
+    body { background: var(--primary); color: var(--white); font-family: 'Poppins', sans-serif; margin: 0; }
+    .cover { height: 140px; width: 100%; border-radius: 0 0 32px 32px; position: relative; box-shadow: 0 6px 24px #0003; }
+    .profile-box { display: flex; flex-direction: column; align-items: center; margin-top: -65px; z-index: 2; position: relative; }
+    .profile-pic { width: 110px; height: 110px; border-radius: 50%; border: 4px solid #fff; background: #18345a; object-fit: cover; box-shadow: 0 2px 20px #0005; }
+    .upload-btn { position: absolute; right: 22vw; top: 101px; background: var(--secondary); color: #fff; border: none; padding: 0.36em 0.9em; border-radius: 10px; font-size: 0.97em; cursor:pointer; box-shadow:0 2px 8px #0002;}
+    @media (max-width: 600px) { .upload-btn { right: 2vw; } }
+    .cover-select { position: absolute; right: 16px; top: 14px;}
+    .cover-swatches { display: flex; gap: 7px;}
+    .swatch { width: 28px; height: 28px; border-radius: 7px; border: 2px solid #fff; cursor: pointer; box-shadow: 0 2px 10px #0002; }
+    .swatch.selected { border: 3px solid var(--dark-yellow);}
+    .info-area { margin: 0.7em 1em 1.6em 1em; }
+    .c-name { color: var(--dark-yellow); font-size: 1.5em; font-weight: 700; text-align: center; letter-spacing:0.6px; margin-bottom:0.1em;}
+    .c-info { color: #cbe7fa; text-align: center; margin: .2em 0 .5em;}
+    .c-id { color: var(--secondary); text-align: center; font-size: 1.1em; }
+    .card-area { margin: 1.5em 1em 1.8em 1em;}
+    .member-cards { display: flex; gap: 1em; justify-content: center; margin: 1.5em 0 0.5em 0;}
+    .m-card { min-width: 120px; background: #292929; border-radius: 13px; padding: 1.1em 1em; color: #fff; text-align: center; box-shadow: 0 2px 14px #0003; cursor: pointer; transition: transform .25s; }
     .m-card.gold { background: linear-gradient(120deg,#ffd700,#ffeb66);}
     .m-card.silver { background: linear-gradient(120deg,#d0d0d0,#fff);}
     .m-card.bronze { background: linear-gradient(120deg,#b08d57,#ffe7b2);}
     .m-card.animated { transform: scale(1.09) rotate(-2deg);}
-    .member-pay { margin-top:0.7em; text-align:center;}
-    .member-pay button { background:var(--secondary); color:#fff; border:none; padding:0.5em 1.4em; border-radius:7px; font-weight:600; cursor:pointer; margin:0 0.5em;}
-    .member-status { text-align:center; color: var(--gold); font-weight:700; }
-    .info-label { color:var(--dark-yellow); font-weight:700; }
-    .menu { display:flex; justify-content:space-around; align-items:center; background:#112945; border-radius:19px 19px 0 0; position:sticky; bottom:0; left:0; right:0; z-index:10; margin-top:0.6em; padding:0.3em 0.12em; box-shadow:0 -2px 12px #0003;}
-    .menu a { flex:1; text-align:center; color:var(--white); font-size:0.97em; padding:0.5em 0;}
-    .menu span { display:block;}
-    .menu a span:first-child {font-size:1.19em; margin-bottom:0.1em;}
-    .form-modal { display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:#0006; z-index:9999; align-items:center; justify-content:center;}
-    .form-modal.active { display:flex;}
-    .modal-box { background:#18345a; padding:2em 1.2em; border-radius:14px; max-width:340px; width:93vw; box-shadow:0 2px 18px #0005;}
-    .modal-box h3 { color:var(--dark-yellow);}
-    .modal-box label { color:var(--secondary); font-weight:600;}
-    .modal-box input, .modal-box textarea { width:100%; margin-top:0.2em; border:none; border-radius:7px; padding:0.65em;}
-    .modal-box button { background:var(--secondary); color:#fff; border:none; border-radius:7px; margin-top:1em; padding:0.55em 1.2em; font-weight:600;}
-    .close-btn { position:absolute; right:7vw; top:7vh; background:var(--dark-yellow); border:none; border-radius:50%; width:32px; height:32px; font-size:1.2em; cursor:pointer;}
-    .invest-area { margin-bottom:5em;}
-    .invest-slider { display:flex; overflow-x:auto; gap:1em; padding:1em 0;}
-    .invest-slide { min-width:215px; background:#23406c; border-radius:13px; padding:1em 1em; box-shadow:0 2px 16px #0003; color:#ffd600;}
-    .invest-title { font-weight:700; color:#ffd600;}
-    .invest-desc { color:#cbe7fa; font-size:0.98em;}
+    .member-pay { margin-top: 0.7em; text-align: center; }
+    .member-pay button { background: var(--secondary); color: #fff; border: none; padding: 0.5em 1.4em; border-radius: 7px; font-weight: 600; cursor: pointer; margin: 0 0.5em;}
+    .member-status { text-align: center; color: var(--gold); font-weight: 700; }
+    .menu { display: flex; justify-content: space-around; align-items: center; background: #112945; border-radius: 19px 19px 0 0; position: sticky; bottom: 0; left: 0; right: 0; z-index: 10; margin-top: 0.6em; padding: 0.3em 0.12em; box-shadow: 0 -2px 12px #0003; }
+    .menu a { flex: 1; text-align: center; color: var(--white); font-size: 0.97em; padding: 0.5em 0;}
+    .menu span { display: block;}
+    .menu a span:first-child { font-size: 1.18em; margin-bottom: 0.1em;}
+    .form-modal { display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: #0006; z-index: 9999; align-items: center; justify-content: center; }
+    .form-modal.active { display: flex;}
+    .modal-box { background: #18345a; padding: 2em 1.2em; border-radius: 14px; max-width: 340px; width: 93vw; box-shadow: 0 2px 18px #0005;}
+    .modal-box h3 { color: var(--dark-yellow);}
+    .modal-box label { color: var(--secondary); font-weight: 600;}
+    .modal-box input, .modal-box textarea { width: 100%; margin-top: 0.2em; border: none; border-radius: 7px; padding: 0.65em;}
+    .modal-box button { background: var(--secondary); color: #fff; border: none; border-radius: 7px; margin-top: 1em; padding: 0.55em 1.2em; font-weight: 600;}
+    .close-btn { position: absolute; right: 7vw; top: 7vh; background: var(--dark-yellow); border: none; border-radius: 50%; width: 32px; height: 32px; font-size: 1.2em; cursor: pointer;}
+    .invest-area { margin-bottom: 5em; }
+    .invest-slider { display: flex; overflow-x: auto; gap: 1em; padding: 1em 0;}
+    .invest-slide { min-width: 215px; background: #23406c; border-radius: 13px; padding: 1em 1em; box-shadow: 0 2px 16px #0003; color: #ffd600; }
+    .invest-title { font-weight: 700; color: #ffd600;}
+    .invest-desc { color: #cbe7fa; font-size: 0.98em;}
     footer { background: #0e233a; text-align: center; padding: 1.2em 0 0.7em 0; font-size: 0.93em; color: #e3e3e3; border-radius: 14px 14px 0 0; margin-top: 3em;}
     footer a { color: var(--dark-yellow);}
+    @media (max-width: 520px) {
+      .profile-pic { width: 95px; height: 95px;}
+    }
   </style>
 </head>
 <body>
@@ -57,7 +61,7 @@
   <div class="profile-box">
     <img src="../images/default-profile.png" id="profilePic" class="profile-pic" alt="Profile Photo">
     <input type="file" id="profileUpload" accept="image/*" style="display:none">
-    <button class="upload-btn" onclick="document.getElementById('profileUpload').click()">Upload Photo</button>
+    <button class="upload-btn" onclick="document.getElementById('profileUpload').click()">Photo</button>
     <div class="cover-select">
       <div class="cover-swatches" id="coverSwatches"></div>
     </div>
@@ -147,7 +151,6 @@ const gradients = [
   "linear-gradient(120deg,#18345a,#3bb4f2)"
 ];
 
-const swatchColors = ["#0e2a47", "#ffd600", "#b08d57", "#3bb4f2", "#18345a", "#d0d0d0", "#2a78d1"];
 const swatchEl = document.getElementById('coverSwatches');
 gradients.forEach((g, i)=>{
   const s = document.createElement('div');
@@ -306,4 +309,4 @@ function closeModal(){
 }
 </script>
 </body>
-</html>
+  </html>
