--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -191,7 +191,7 @@
   <div class="brand-login-title">Raj Marketing</div>
   <div class="login-container shadow">
     <div class="login-header">
-      <img src="../images/logo.svg" alt="Raj Marketing Logo">
+      <img src="../images/assets/images/20250714_004854.png" alt="Raj Marketing Logo">
       <div style="font-weight:700; color:var(--dark-yellow); font-size:1.18em; margin-bottom:0.8em;">Welcome Back!</div>
     </div>
     <form id="loginForm" class="login-form" autocomplete="on">
