--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@
     <section class="slider-section">
       <h2 class="section-title">Latest Promotions</h2>
       <div class="slider shadow" id="ad-slider">
-        <div class="ad-slide"><img src="assets/images/ad1.jpg" alt="" class="ad-img"><span class="ad-caption">Gold Series Nets</span></div>
-        <div class="ad-slide"><img src="assets/images/ad2.jpg" alt="" class="ad-img"><span class="ad-caption">Silver Savings</span></div>
-        <div class="ad-slide"><img src="assets/images/ad3.jpg" alt="" class="ad-img"><span class="ad-caption">Bronze Budget</span></div>
-        <div class="ad-slide"><img src="assets/images/ad4.jpg" alt="" class="ad-img"><span class="ad-caption">Free Fitting</span></div>
-        <div class="ad-slide"><img src="assets/images/ad5.jpg" alt="" class="ad-img"><span class="ad-caption">Monsoon Ready</span></div>
+        <div class="ad-slide"><img src="assets/images/07ec6648b183db7bcc914c5d36b95700.jpg" alt="" class="ad-img"><span class="ad-caption">Gold Series Nets</span></div>
+        <div class="ad-slide"><img src="assets/images/19f427872ebbd71bb920198bc336a4bb.jpg" alt="" class="ad-img"><span class="ad-caption">Silver Savings</span></div>
+        <div class="ad-slide"><img src="assets/images/340a61c8a5b20b86a1cc9673ec325f4a.jpg" alt="" class="ad-img"><span class="ad-caption">Bronze Budget</span></div>
+        <div class="ad-slide"><img src="assets/images/41b84a984e5ce0ca543e2c7a7f0175cb.jpg" alt="" class="ad-img"><span class="ad-caption">Free Fitting</span></div>
+        <div class="ad-slide"><img src="assets/images/340a61c8a5b20b86a1cc9673ec325f4a.jpg" alt="" class="ad-img"><span class="ad-caption">Monsoon Ready</span></div>
         <div class="ad-slide"><img src="assets/images/ad6.jpg" alt="" class="ad-img"><span class="ad-caption">Easy Clean Mesh</span></div>
         <div class="ad-slide"><img src="assets/images/ad7.jpg" alt="" class="ad-img"><span class="ad-caption">Refer & Earn</span></div>
         <div class="ad-slide"><img src="assets/images/ad8.jpg" alt="" class="ad-img"><span class="ad-caption">Door Nets</span></div>
