--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     <nav class="lower-menu shadow">
       <a href="assets/pages/appointment.html"><span>📅</span><span>Appointment</span></a>
       <a href="assets/pages/price.html"><span>💵</span><span>Price Check</span></a>
-      <a href="assets/pages/estimate.html"><span>🧮</span><span>Estimate</span></a>
+      <a href="assets/datahub/estimate.html"><span>🧮</span><span>Estimate</span></a>
       <a href="tel:+919876543210"><span>📞</span><span>Call Now</span></a>
     </nav>
 
