--- a/assets/datahub/estimate.html
+++ b/assets/datahub/estimate.html
@@ -73,7 +73,7 @@
     .form-row {
       display: flex;
       flex-wrap: wrap;
-      gap: 1.2em;
+      gap: .2em;
       margin-bottom: 1.1em;
     }
     .form-group {
