--- a/assets/datahub/estimate.html
+++ b/assets/datahub/estimate.html
@@ -337,7 +337,7 @@
 <body>
   <div class="estimate-container">
     <div class="estimate-header">
-      <img src="https://raw.githubusercontent.com/Player456B/rajmarketing/main/assets/images/logo.svg" alt="Raj Marketing Logo" class="estimate-logo">
+      <img src="https://raw.githubusercontent.com/Player456B/rajmarketing/main/assets/images/assets/images/20250716_074421.png"alt="Raj Marketing Logo" class="estimate-logo">
       <div class="estimate-title">Estimate Form</div>
       <div class="estimate-id-date" id="estId"></div>
     </div>
